force-app/main/default/objects/Address__c/fields/GPS_location__c.field-meta.xml
<CustomField>
    <fullName>GPS_location__c</fullName>
    <label>GPS location</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>