force-app/main/default/objects/Address__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <formula>Street_Address__c &amp; &quot;\n&quot; &amp; City__c &amp; &quot;, &quot; &amp;  State__c &amp; &quot;, &quot; &amp; Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>