force-app/main/default/objects/Address__c/fields/Zip_code__c.field-meta.xml
<CustomField>
    <fullName>Zip_code__c</fullName>
    <label>Zip code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>