force-app/main/default/objects/Address__c/validationRules/Must_have_a_City.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_a_City</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK( City__c ), true, false)</errorConditionFormula>
    <errorDisplayField>City__c</errorDisplayField>
    <errorMessage>Please incude a city.</errorMessage>
</ValidationRule>