force-app/main/default/objects/Address__c/validationRules/Must_have_a_street.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_a_street</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK(  Street__c  ), true, false)</errorConditionFormula>
    <errorDisplayField>Street__c</errorDisplayField>
    <errorMessage>Please include the street</errorMessage>
</ValidationRule>