force-app/main/default/objects/Address__c/validationRules/Must_include_a_zip_code.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_include_a_zip_code</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK(  Zip_code__c ), true, false)</errorConditionFormula>
    <errorDisplayField>Zip_code__c</errorDisplayField>
    <errorMessage>Please include a zip code</errorMessage>
</ValidationRule>