force-app/main/default/objects/Address__c/validationRules/Must_include_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_include_State</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISBLANK(  State__c  ), true, false)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>Please include the State.</errorMessage>
</ValidationRule>