force-app/main/default/objects/Address__c/validationRules/Zip_code_must_have_valid_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_code_must_have_valid_format</fullName>
    <active>true</active>
    <description>Validates that the candidate Zip/Postal Code is
in 99999 or 99999-9999 format.</description>
    <errorConditionFormula>NOT(REGEX( Zip_code__c ,&quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
    <errorDisplayField>Zip_code__c</errorDisplayField>
    <errorMessage>Zip code must be in 99999 or 99999-9999
format.</errorMessage>
</ValidationRule>