force-app/main/default/objects/Address__c/validationRules/Zip_Code_Validator.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_Validator</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Zip_Code__c , &quot;^\\d{5}(?:[-\\s]\\d{4})?$&quot;))</errorConditionFormula>
    <errorDisplayField>Zip_Code__c</errorDisplayField>
    <errorMessage>Invalid Zip Code (XXXXX or XXXXX-XXXX)</errorMessage>
</ValidationRule>